[project]
name = "amc-tasksim"
version = "0.1.0"
description = "Adaptive Mixed-Criticality task-set generation and simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "tqdm>=4.66",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
